# readspace

./: README.md
mobile/: .gitignore  app.config.ts  biome.json  eas.json  globals.css  metro.config.js  package.json  tailwind.config.ts  tsconfig.json
mobile/app/: +html.tsx  +not-found.tsx  _layout.tsx  modal.tsx
mobile/components/: EditScreenInfo.tsx  Themed.tsx
mobile/constants/: Colors.ts
mobile/ios/: Podfile
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20250515_191554_2c975cea25e6_init_books_highlights_schema.py
server/app/: main.py  middleware.py
server/app/core/: config.py  database.py  dependencies.py  exceptions.py
server/app/db/: base_class.py  session.py
server/app/models/: book.py  book_models.py  feedback_models.py  highlight_models.py  user_models.py
server/app/repositories/: base.py  books.py  feedback.py  highlights.py  supabase.py
server/app/routers/: __init__.py  books.py  feedback.py  highlights.py  upload.py
server/app/schemas/: auth.py  book.py  books.py  feedback.py  highlights.py  settings.py
server/app/services/: auth.py
server/app/utils/: logging_config.py
supabase/: config.toml
supabase/migrations/: 20250515181209_init_storage.sql
web/: biome.json  database.types.ts  env.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/components/: feed.tsx  (+5 more)
(+163 files in other folders)
